<resources>
    <string name="app_name">Pizzería Los Arcos</string>
    <string name="text_guest_button">Invitado</string>
    <string name="text_login_button">Iniciar sesión</string>
    <string name="text_signin_button">Registrarse</string>
    <string name="email_hint">e-mail</string>
    <string name="password_hint">Contraseña</string>
    <string name="text_login_cardview">Introduce tus datos</string>
    <string name="text_login_description">Ingresa tus datos</string>
    <string name="forgot_password_text"><u>Olvidé mi contraseña</u></string>
    <string name="signin_text_view"><u>Registrar una cuenta</u></string>
    <string name="name_text">Nombre(s)</string>
    <string name="name_hint">Nombre(s)</string>
    <string name="lastname_text">Apellidos</string>
    <string name="next_text">Siguiente</string>
    <string name="toast_signin_empty_fields">Favor de completar los campos solicitados</string>
    <string name="field_required">Este campo es requerido</string>
    <string name="sign_number_description_text">Registrate con tu número celular</string>
    <string name="region_text">Región</string>
    <string name="phonenumber_text">Número celular</string>
    <string name="phonenumber_hint">Número celular (10 dígitos)</string>
    <string name="verification_code_received_description">Introduzca el código de verificación recibido</string>
    <string name="send_verification_code_text">Enviado a</string>
    <string name="verification_code_text_description_field">Código de verificación</string>
    <string name="create_password_text">Crea una contraseña</string>
    <string name="verify_password_hint">Verifica contraseña</string>
    <string name="features_password_text">De 8 a 16 caracteres, incluyendo al menos tres de los siguientes tipos de caracteres: números, mayúsculas, minúsculas y caracteres especiales</string>
    <string name="menu_nav_text">Menú</string>
    <string name="more_nav_text">Más</string>
    <string name="logout_text">Cerrar sesión</string>
    <string name="action_settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="delete">Borrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart_nav_text">Carrito</string>
    <string name="send_order">Enviar pedido</string>
    <string name="baned_dialog">Tu cuenta ha sido limitada para hacer pedidos por el uso incorrecto del servicio. Comunicate a soporte si deseas revisar tu caso.</string>
    <string name="problem_occurred">!Ha ocurrido un problema!</string>
    <string name="acept">Aceptar</string>
    <string name="notice">¡Aviso!</string>
    <string name="user_create_successfully_message">Tu usuario se ha creado correctamente. Por favor no olvides tu usuario ni tu contraseña</string>
    <string name="congratulations_message">¡Felicidades, %s!</string>
    <string name="welcome_message">Bienvenido de vuelta, %s</string>
    <string name="order_sent_successfully_title">Pedido enviado correctamente</string>
    <string name="order_successfully_message">Tu pedido ya está en proceso, puedes pasar por el en %s minutos. \nNúmero de folio: %s\n\nRecuerda recogerlo en la pizzería ubicada en el Periférico Gómez Morín</string>
    <string name="logout_question_message">¿Seguro que quieres salir?</string>
    <string name="cancel_option">Cancelar</string>
    <string name="edit_data_with_support_message">Es posible cambiar el número celular o la dirección e-mail contactandose con soporte.</string>
    <string name="important_announcement">¡Aviso importante!</string>
    <string name="delete_account_message">Tu cuenta será eleminada permanentemente junto con tu información de usuario.\n\nLas ordenes realizadas en esta cuentan seguiran almacenas en nuestros servidores por cuestiones de estadística, así como las incidencias que tuvo la cuenta al hacer uso del servicio.\n\nSi se quisiera crear una cuenta nueva con el número celular actual, será necesario contactar a soporte.\n\nIntroduce tu contraseña actual para continuar</string>
    <string name="delete_account_successfully">Cuenta eliminada correctamente</string>
    <string name="save_text">Guardar</string>
    <string name="current_password_hint">Contraseña actual</string>
    <string name="new_password_hint">Contraseña nueva</string>
    <string name="changue_paswword_successfully_message">Contraseña actualizada correctamente</string>
    <string name="Copyright_message">Derechos de autor © 2021 Pizzería Los Arcos. Todos los derechos reservados.</string>
    <string name="terms_service_text">Si pulsa Aceptar significa que acepta nuestros
        <a href="https://pizzerialosarcos-9c55f.web.app/">Términos y condiciones</a> y ha leído el
        <a href="https://pizzerialosarcos-9c55f.web.app/notice_privacy.html">Aviso de privacidad</a>.
    </string>
    <string name="password_recovery_successfully_message">Contraseña restaurada correctamente. Iniciando sesión automaticamente.</string>
    <string name="text_notifications_title">Notificaciones</string>
    <string name="empty_notification_list">No tienes notificaciones nuevas</string>
    <string name="empty_orders_in_process_list">No tienes ordenes en proceso.</string>
    <string name="empty_orders_history_list">Aún no has hecho ningún pedido.</string>
    <string name="empty_item_list">No hay alimentos agregados al carrito.</string>
    <string name="text_orders_in_process_title">Ordenes en proceso</string>

</resources>