<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@color/quarter_color"
    android:layout_height="match_parent"
    android:windowTranslucentStatus="false"
    tools:context=".Controller.SignInActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/email_sign_form"
        android:paddingTop="40dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sign_description_text"
            android:text="@string/text_login_description"
            android:layout_gravity="left"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/name_text"
            android:text="@string/name_text"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:id="@+id/name_edit_text"
            android:hint="@string/name_text"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <TextView
            android:id="@+id/lastname_text_description"
            android:text="@string/lastname_text"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:id="@+id/lastname_edit_text"
            android:hint="@string/lastname_text"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <TextView
            android:id="@+id/email_text"
            android:text="@string/email_hint"
            android:layout_marginTop="16dp"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <AutoCompleteTextView
            android:id="@+id/email_account"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:nextFocusDown="@id/next_signin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </AutoCompleteTextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_signin_button"
            android:text="@string/next_text"
            android:backgroundTint="@color/secondary_color"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

</LinearLayout>