<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@color/quarter_color"
    android:layout_height="match_parent"
    android:windowTranslucentStatus="false"
    tools:context=".Controller.CreatePasswordActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/verication_code_sign_form"
        android:paddingTop="40dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sign_create_password_description_text"
            android:text="@string/create_password_text"
            android:layout_gravity="left"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/password_icon"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/ic_baseline_https_24">
            </ImageView>

            <EditText
                android:id="@+id/password_edit_text"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:layout_toEndOf="@id/password_icon"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/verify_password_icon"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/ic_baseline_https_24">
            </ImageView>

            <EditText
                android:id="@+id/verify_password_edit_text"
                android:hint="@string/verify_password_hint"
                android:inputType="textPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:layout_toEndOf="@id/verify_password_icon"
                android:layout_marginStart="10dp"
                android:imeOptions="actionDone"
                android:nextFocusDown="@id/create_account_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </RelativeLayout>

        <TextView
            android:id="@+id/features_password"
            android:text="@string/features_password_text"
            android:layout_marginTop="5dp"
            android:textSize="10sp"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_button"
            android:text="@string/text_signin_button"
            android:backgroundTint="@color/secondary_color"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/password_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ProgressBar>

</LinearLayout>