<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@color/quarter_color"
    android:layout_height="match_parent"
    android:windowTranslucentStatus="false"
    tools:context=".Controller.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/email_login_form"
        android:paddingTop="40dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_description_text"
            android:text="@string/text_login_description"
            android:layout_gravity="left"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/login_with_phone_number_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="onClick"
                app:srcCompat="@drawable/ic_baseline_local_phone_24"
                android:layout_width="30dp"
                android:layout_height="30dp">
            </androidx.appcompat.widget.AppCompatImageView>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/login_with_email_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/login_with_phone_number_icon"
                app:srcCompat="@drawable/ic_baseline_email_24"
                android:tint="@android:color/darker_gray"
                android:onClick="onClick">
            </androidx.appcompat.widget.AppCompatImageView>

        </RelativeLayout>

        <TextView
            android:id="@+id/email_login_text"
            android:text="@string/email_hint"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/ic_baseline_email_24">
            </ImageView>

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:layout_toEndOf="@id/email_icon"
                android:layout_marginStart="10dp"
                android:imeOptions="actionNext"
                android:nextFocusDown="@id/password"
                android:maxLines="1">
            </AutoCompleteTextView>
            <requestFocus></requestFocus>

        </RelativeLayout>

        <TextView
            android:id="@+id/phone_number_text"
            android:text="@string/phonenumber_text"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/phone_number_icon"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/ic_baseline_local_phone_24">
            </ImageView>

            <Spinner
                android:id="@+id/region_login_spinner"
                android:layout_toEndOf="@id/phone_number_icon"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="5dp">
            </Spinner>

            <AutoCompleteTextView
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phonenumber_hint"
                android:inputType="number"
                android:layout_toEndOf="@id/region_login_spinner"
                android:imeOptions="actionNext"
                android:nextFocusDown="@id/password"
                android:maxLines="1">
            </AutoCompleteTextView>
            <requestFocus></requestFocus>

        </RelativeLayout>

        <TextView
            android:id="@+id/password_text"
            android:text="@string/password_hint"
            android:layout_marginTop="16dp"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/password_icon"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/ic_baseline_https_24">
            </ImageView>

            <EditText
                android:id="@+id/password"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_toEndOf="@id/password_icon"
                android:layout_marginStart="10dp"
                android:imeOptions="actionDone"
                android:nextFocusDown="@id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:text="@string/text_login_button"
            android:backgroundTint="@color/secondary_color"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:layout_height="60dp">
        </com.google.android.material.button.MaterialButton>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/recovery_text"
                android:text="@string/forgot_password_text"
                android:layout_marginTop="5dp"
                android:layout_alignParentEnd="true"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:id="@+id/signIn_text"
                android:text="@string/signin_text_view"
                android:layout_marginTop="5dp"
                android:layout_alignParentStart="true"
                android:textSize="15sp"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

        </RelativeLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ProgressBar>

</LinearLayout>